-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.0
-
None
-
349a18096 (dev), d63c560ec (dev), e6e3da4de (6.8)
Building https://invent.kde.org/graphics/spectacle fails with
/home/nico/kde/build/spectacle/src/.rcc/qmlcache/spectacle_Gui/CopiedMessage_qml.cpp: In lambda function: /home/nico/kde/build/spectacle/src/.rcc/qmlcache/spectacle_Gui/CopiedMessage_qml.cpp:190:72: error: ‘QString::QString(const char*)’ is private within this context 190 | aotContext->initGetObjectLookup(1, r2_0, QQmlPrivate::compositeMetaType(aotContext->compilationUnit, "AnimatedLoader")); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ In file included from /home/nico/kde/usr/include/QtQml/qjsprimitivevalue.h:10, from /home/nico/kde/usr/include/QtQml/qqmlprivate.h:18, from /home/nico/kde/build/spectacle/src/.rcc/qmlcache/spectacle_Gui/CopiedMessage_qml.cpp:2:
See https://bugs.kde.org/show_bug.cgi?id=494281
Adding "remove_definitions(-DQT_NO_CAST_FROM_ASCII)" to CMake fixes the issue.
| For Gerrit Dashboard: QTBUG-129797 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 596457,7 | Compiler: Wrap raw string literals in QStringLiteral in generated code | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 596553,5 | tst_qmlcppcodegen: Compile test with QT_NO_CAST_FROM_ASCII | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 596721,2 | Compiler: Wrap raw string literals in QStringLiteral in generated code | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |