Compiler: Wrap raw string literals in QStringLiteral in generated code

Amends e7146cd98700c29802214a39a4cefd9db146c97a

Pick-to: 6.8
Fixes: QTBUG-129797
Change-Id: I5dc48412cf29bd2de877dd681ea309a6e74d75c5
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>